# python_testing

./: .flake8  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
my_sum/: __init__.py
srcs/auto/: args.py
srcs/my_sum/: __init__.py
tests/: conftest.py  requirements.txt  test.py  test_example.py
