[metadata]
name = py_testing
description = testing pytest, tox and github actions
platforms = unix, linux, osx, win32

[options]
packages =
	auto
	my_sum
python_requires = >=3.6
package_dir =
	=srcs

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
auto = py.typed
my_sum = py.typed

[flake8]
max-line-length = 160
ignore = E305, F841, W191
exclude = .git,__pycache__,__init__.py